# scrn

./: .gitignore  CMakeLists.txt  README.txt  verify_fix
.Jules/: palette.md
.github/workflows/: c-cpp.yml
.jules/: bolt.md  sentinel.md
benchmarks/: bench_ascii.cpp  bench_buffer_write.cpp  bench_string_append  bench_string_append.cpp  bench_string_build.cpp
src/: SecureBuffer.h  main.cpp
tests/: repro_secure_buffer.cpp  verify_fix_secure_buffer.cpp
tests/mocks/: conio.h  windows.h
